k8s2/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: user:2
          readinessProbe:
            httpGet:
              port: 8080
              path: /users
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 5
            failureThreshold: 3
