k8s2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: dev
spec:
  rules:
    - host: user.com
      http:
        paths:
          - backend:
              service:
                name: user-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
